# embed2image-contrastive-retrieval

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json
src/: audio_encoder.py  eval_finetune.py  eval_projection.py  main.py  text_encoder.py  train_finetune.py  train_projection.py
src/data/: __init__.py  clotho.py
src/models/: __init__.py  baseline.py  embed2image.py  projection.py  vision_head.py
src/utils/: __init__.py  download_dataset.py  download_embeddings.py  embed2image.py  embeddings.py  hf_uploader.py  images.py  metrics.py  pseudo_images.py
