[project]
name = "embed2image-contrastive-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aac-datasets",
    "requests",
    "tqdm",
    "transformers",
    "torch",
    "torchvision",
    "torchaudio",
    "einops",
    "timm",
    "faiss-cpu",
    "sentence-transformers",
    "hear21passt",
    "huggingface-hub>=0.26.0",
    "wandb>=0.22.0",
]
